# fae

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Entitlements-debug.plist  Entitlements.plist  HEARTBEAT.md  PrivacyInfo.xcprivacy  README.md  SOUL.md  benchmark-guardrail-post-train-data.md  cached-frolicking-quail.md  claude-post-train-data.md  codex-post-train-data.md  justfile  preference-guardrail-post-train-data.md  public-preference-expansion-post-train-data.md  tool-post-train-data.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.pi/todos/: 7ad9b26d.md  ec762b7b.md
.planning/: BLOCKER-5.7.md  CLAUDE-CODE-PROMPT.md  CODEX_REVIEW_COMPLETE.md  GSD-FRAMEWORK.md  PHASE-5.4-COMPLETE.md  PHASE-5.5-COMPLETE.md  PLAN-phase-0.1.md  PLAN-phase-1.1.md  PLAN-phase-1.2.md  PLAN-phase-1.3-llm.md  PLAN-phase-1.3.md  PLAN-phase-1.4-llm.md  PLAN-phase-1.4.md  PLAN-phase-1.5.md  PLAN-phase-2.1-event-router.md  PLAN-phase-2.1.md  PLAN-phase-2.2-event-router.md  PLAN-phase-2.2.md  PLAN-phase-2.3.md  PLAN-phase-2.4.md  PLAN-phase-3.1.md  PLAN-phase-3.2-reminders-notes.md  PLAN-phase-3.2.md  PLAN-phase-3.3.md  PLAN-phase-3.4.md  PLAN-phase-4.1.md  PLAN-phase-4.2.md  PLAN-phase-4.3.md  PLAN-phase-5.1.md  PLAN-phase-5.2.md  PLAN-phase-5.3.md  PLAN-phase-5.4.md  PLAN-phase-5.5.md  PLAN-phase-5.6.md  PLAN-phase-5.7.md  PLAN-phase-6.1.md  PLAN-phase-6.1b.md  PLAN-phase-6.2.md  PLAN-phase-6.3.md  PLAN-phase-6.4.md  (+31 more)
.planning/archive/: PLAN-phase-4.1-canvas.md.bak  ROADMAP-milestone2-self-update.md  STATE-milestone2-self-update.json  pi-models-json-resilience.md
.planning/plans/: PLAN-phase-1.1.md  PLAN-phase-1.2.md  PLAN-phase-5.1.md  PLAN-phase-5.2.md  PLAN-phase-5.3.md  PLAN-phase-5.4.md  ffi-credentials-remediation.md  pure-swift-rebuild.md  refactor-coordinator.md  review-unwrap-calls.md  skill-first-settings-channels-world-class-plan.md
.planning/prompts/: README.md  phase-0-foundation.md  phase-1-voice-pipeline.md  phase-2-memory.md  phase-3-tools-agent.md  phase-4-background-systems.md  phase-5-polish-ship.md
.planning/reviews/: CODEX-SUMMARY.txt  COMPREHENSIVE_REVIEW_SUMMARY.md  EXTERNAL_REVIEW_COMPLETE.md  GLM-REVIEW-SUMMARY.txt  INDEX.md  PHASE-5.7-REVIEW.md  QUALITY_PATTERNS_SUMMARY.md  README.md  REVIEW-FINAL.md  REVIEW_COMPLETE.md  REVIEW_ITERATION_3_SUMMARY.md  REVIEW_SUMMARY.md  REVIEW_SUMMARY.txt  TYPE_SAFETY_FIXES_APPLIED.md  _agent_context.md  _diff.txt  analysis.md  build.md  (+117 more)
Personality/: fae-identity-profile.md  system_prompt.md
Prompts/: briefing.md  extraction.md  onboarding.md  research.md  system_prompt.md
Skills/: apple-ecosystem.md  canvas.md  desktop.md  external-llm.md  pi.md  uv-scripts.md
agent/: agents
assets/: AppIcon.icns
docs/: FAE-PERSONALIZATION-SPEC.md  FAE_ARCHITEXTURE_DECISIONS.md  Memory.md  PHASE3_ASSURANCE.md  fae-identity-voice-optimized.md  kyutai_moshiko_technical_report.md  linker-anchor.md  llm-benchmarks.md  memory-architecture-plan.md  model-switching.md  personalization-interviews-and-proactive-plan.md  prompt-content-interview.md  tool-judgment-eval.md  tts_voice_cloning_research.md  voice-identity-rollout.md  voice_ai_models_research_report.md
fae-search/: Cargo.toml
fae-search/src/: cache.rs  circuit_breaker.rs  config.rs  content.rs  engine.rs  error.rs  http.rs  lib.rs  types.rs
fae-search/src/engines/: bing.rs  brave.rs  duckduckgo.rs  google.rs  mod.rs  startpage.rs
fae-search/src/orchestrator/: dedup.rs  mod.rs  scoring.rs  search.rs  url_normalize.rs
fae-search/test-data/: bing.html  brave.html  content_complex.html  duckduckgo.html  google.html  startpage.html
fae-search/tests/: orchestrator_integration.rs
scripts/: auto-approve.sh  benchmark_qwen9b_quantizations.py  benchmark_qwen9b_toolcalling_servers.py  cleanup_legacy_model_caches.sh  convert_speaker_model.py  export_mlx_tune_preference_data.py  fuse_and_benchmark_candidate.sh  generate_surgical_lane_data.py  generate_synthetic_training_data.py  hf_jobs_train_orpo.py  hf_jobs_train_sft.py  import_hf_lane_data.py  import_public_preference_data.py  mlx_benchmark.py  mlx_benchmark_prompts.json  mlx_benchmark_results.json  mlx_deep_benchmark.py  prepare_training_data.py  run_9b_hf_lane_experiments.sh  run_9b_surgical_lane.sh  run_hf_dataset_lane_matrix.sh  run_mlx_tune_preference.py  run_paro_qwen35_baseline_matrix.sh  run_qwen9b_quantization_ab.sh  run_qwen9b_toolcalling_server_ab.sh  submit_hf_jobs_training.sh  test-comprehensive-safe.sh  test-comprehensive.sh  test-harness.sh  test-report-viewer.py  test-with-recording.sh  test_self_improvement_pipeline.sh  train_mlx_lora.sh  train_mlx_lora_chunked.sh  train_mlx_lora_smoke.sh  train_mlx_tune_preference.sh  train_mlx_tune_preference_chunked.sh  upload_to_hf.py  upload_training_data_to_hf.py
src/: approval.rs  config.rs  diagnostics.rs  doctor.rs  error.rs  external_llm.rs  fae_dirs.rs  ffi.rs  huggingface.rs  intent.rs  kernel_signature.rs  lib.rs  linker_anchor.rs  memory.rs  memory_pressure.rs  model_integrity.rs  model_picker.rs  model_selection.rs  model_tier.rs  mutation_manifest.rs  permissions.rs  personality.rs  progress.rs  runtime.rs  runtime_audit.rs  skills.rs  soul_version.rs  startup.rs  system_profile.rs  test_utils.rs  theme.rs  voice_clone.rs  voice_command.rs  voiceprint.rs  wakeword.rs  x0x_listener.rs
tests/: anthropic_contract.rs  apple_tool_registration.rs  canvas_integration.rs  capability_bridge_e2e.rs  cross_provider.rs  e2e_anthropic.rs  e2e_openai.rs  e2e_voice_chatterbox.rs  error_recovery.rs  host_command_channel_v0.rs  host_contract_v0.rs  jit_permission_flow.rs  llm_config_integration.rs  llm_final_smoke.rs  llm_server.rs  llm_toml_roundtrip.rs  memory_integration.rs  onboarding_lifecycle.rs  openai_contract.rs  permission_config_roundtrip.rs  permission_skill_gate.rs  personalization_integration.rs  phase_1_3_wired_commands.rs  pi_manager.rs  pi_session.rs  python_skill_credentials.rs  python_skill_discovery.rs  python_skill_lifecycle.rs  python_skill_runner_e2e.rs  tool_judgment_eval.rs  uv_bootstrap_e2e.rs
training_data/: README.md
(+1564 files in other folders)
