[package]
name = "fae"
version = "0.1.0"
edition = "2024"
description = "Real-time speech-to-speech AI conversation system"
license = "AGPL-3.0"
repository = "https://github.com/saorsa-labs/fae"
autobins = false
default-run = "fae"

[[bin]]
name = "fae"
path = "src/bin/gui.rs"
required-features = ["gui"]

[[bin]]
name = "fae-record-wakeword"
path = "src/bin/record_wakeword.rs"

[[bin]]
name = "fae-avatar-slicer"
path = "src/bin/avatar_slicer.rs"
required-features = ["tools"]

[features]
default = ["gui"]
metal = ["mistralrs/metal"]
gui = ["dioxus"]
tools = []
# TTS ONNX execution provider features.
coreml = ["ort/coreml"]
directml = ["ort/directml"]
cuda = ["ort/cuda"]
# Voice cloning TTS backend (Fish Speech).
fish-speech = []

[dependencies]
# Audio I/O
cpal = "0.17"

# Voice Activity Detection (energy-based, Silero ONNX planned)
# silero-vad integration deferred — using energy-based VAD for now

# Speech-to-Text (uses ort 2.0.0-rc.11)
parakeet-rs = { version = "0.3", default-features = false, features = ["cpu"] }

# LLM inference (mistral.rs — supports 30+ architectures, GGUF, Metal)
mistralrs = "0.7"

# TTS (Kokoro-82M — single ONNX model, misaki-rs G2P phonemizer)
ort = { version = "2.0.0-rc.11", features = ["half"] }
half = "2"
hound = "3"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
misaki-rs = "0.3"

# Model management
hf-hub = "0.4"

# HTTP client (for non-HuggingFace model downloads; shared with hf-hub)
ureq = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
# GUI-only app (no CLI/TUI binaries).

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
urlencoding = "2"
base64 = "0.22"

# Progress indicators
indicatif = "0.17"

# Desktop GUI (optional, behind `gui` feature)
dioxus = { version = "0.6", features = ["desktop"], optional = true }

# TUI (saorsa-tui terminal UI framework, published on crates.io)
# (removed)

# Agent runtime + multi-provider LLM API (saorsa ecosystem)
saorsa-agent = "0.4"
saorsa-ai = { version = "0.4", default-features = false }

# Canvas visual output (saorsa-canvas scene graph)
canvas-core = "0.2"
canvas-mcp = "0.2"
canvas-renderer = { version = "0.2", default-features = false, features = ["charts", "images"] }

# Markdown → HTML rendering
pulldown-cmark = "0.13"

# Syntax highlighting for code blocks
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Acoustic Echo Cancellation (FDAF adaptive filter)
fdaf-aec = "0.1"


# WebSocket client (for remote canvas-server)
tokio-tungstenite = "0.24"
futures-util = "0.3"
url = "2"

# Utilities
crossbeam-channel = "0.5"
async-trait = "0.1"
rustfft = "6"
rfd = "0.15"
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "wav"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Filesystem utilities (disk space check via statvfs)
libc = "0.2"

# Auto-enable Metal GPU acceleration on macOS (Apple Silicon / Intel with Metal).
# This is equivalent to `--features metal` but happens automatically.
[target.'cfg(target_os = "macos")'.dependencies]
mistralrs = { version = "0.7", features = ["metal"] }

[dev-dependencies]
# Mock HTTP server for API integration tests
axum = "0.8"

# Local path overrides for development (uncomment to use local saorsa-canvas checkout):
# [patch.crates-io]
# canvas-core = { path = "../saorsa-canvas/canvas-core" }
# canvas-mcp = { path = "../saorsa-canvas/canvas-mcp" }
# canvas-renderer = { path = "../saorsa-canvas/canvas-renderer" }
